--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "joi": "^17.13.3",
+    "module-alias": "^2.2.3",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "safe-eval": "^0.4.1",
@@ -22,5 +23,12 @@
   },
   "devDependencies": {
     "pino-pretty": "^13.0.0"
+  },
+  "_moduleAliases": {
+    "@controllers": "./src/controllers",
+    "@middleware": "./src/middleware",
+    "@models": "./src/models",
+    "@routes": "./src/routes",
+    "@utils": "./src/utils"
   }
 }
