--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,11 +25,11 @@ phases:
         --instance-ids "<INSTANCE_ID>"
         --document-name "AWS-RunShellScript"
         --comment "Deploy Docker container"
-        --parameters commands=["aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
-                               "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
-                               "docker stop regulus-container || true",
-                               "docker rm regulus-container || true",
-                               "docker run -d --name regulus-container -p 3000:3000 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]
+        --parameters '{"commands":["aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
+                                    "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
+                                    "docker stop regulus-container || true",
+                                    "docker rm regulus-container || true",
+                                    "docker run -d --name regulus-container -p 3000:3000 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}'
         --region eu-west-1
 artifacts:
   files:
