--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,34 +3,35 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Installing dependencies...
+      - echo "Installing dependencies..."
       - apt-get update -y
       - apt-get install -y docker.io
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Logging in to Amazon ECR..."
       - aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com
   build:
     commands:
-      - echo Building the Docker image...
+      - echo "Building the Docker image..."
       - docker build -t regulus .
       - docker tag regulus:latest 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest
   post_build:
     commands:
-      - echo Pushing the Docker image to Amazon ECR...
+      - echo "Pushing the Docker image to Amazon ECR..."
       - docker push 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest
-      - echo Deploying the Docker container to EC2 via SSM...
-      - >
-        aws ssm send-command
-        --instance-ids "i-064ffb69ac5f0f92e"
-        --document-name "AWS-RunShellScript"
-        --comment "Deploy Docker container"
-        --parameters '{"commands":["aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
-                                    "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
-                                    "docker stop regulus-container || true",
-                                    "docker rm regulus-container || true",
-                                    "docker run -d --name regulus-container -p 3000:3000 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}'
-        --region eu-west-1
+      - echo "Deploying the Docker container to EC2 via SSM..."
+      - |
+        aws ssm send-command \
+          --instance-ids "i-064ffb69ac5f0f92e" \
+          --document-name "AWS-RunShellScript" \
+          --comment "Deploy Docker container" \
+          --parameters '{"commands":["aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
+                                      "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
+                                      "docker stop regulus-container || true",
+                                      "docker rm regulus-container || true",
+                                      "docker run -d --name regulus-container -p 3000:3000 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
+          --region eu-west-1
+
 artifacts:
   files:
     - '**/*'
