prisma congif and migrations added.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     container_name: regulus-aml
     ports:
       - "3000:3000"
+      - "5555:5555"
     depends_on:
       - db
     env_file:
@@ -29,6 +30,9 @@ services:
       DB_NAME: regulus
       DB_PORT: 5432
       PORT: 3000
+    volumes:
+      - .:/app # Maps the local project directory to /app inside the container
+      - /app/node_modules # Ensures node_modules stays container-specific to avoid host conflict
 
 volumes:
   db_data:
