--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,38 +12,46 @@ phases:
       - JWT_SECRET=$(aws ssm get-parameter --name /regulus/prod/JWT_SECRET --with-decryption --query Parameter.Value --output text)
       - LOG_LEVEL=$(aws ssm get-parameter --name /regulus/prod/LOG_LEVEL --with-decryption --query Parameter.Value --output text)
       - NODE_ENV=$(aws ssm get-parameter --name /regulus/prod/NODE_ENV --with-decryption --query Parameter.Value --output text)
+      - echo "Fetched parameters successfully!"
       - echo "INSTANCE_ID=$INSTANCE_ID"
       - echo "REGION=$REGION"
       - echo "Logging in to Amazon ECR..."
       - aws ecr get-login-password --region $REGION | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com
+
   build:
     commands:
       - echo "Building the Docker image..."
       - docker build --no-cache -t regulus .
       - docker tag regulus:latest 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest
+      - echo "Docker image built and tagged successfully!"
+
   post_build:
     commands:
-        - echo "Pushing the Docker image to Amazon ECR..." 
-        - echo "Fetching EC2 Public IP..."
-        - PUBLIC_IP=$(aws ec2 describe-instances \
+      - echo "Pushing the Docker image to Amazon ECR..."
+      - docker push 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest
+      - echo "Fetching EC2 Public IP..."
+      - |
+        PUBLIC_IP=$(aws ec2 describe-instances \
             --instance-ids $INSTANCE_ID \
             --query "Reservations[0].Instances[0].PublicIpAddress" \
-            --output text --region $REGION)
-        - echo "Public IP is $PUBLIC_IP"
-        - API_URL=http://$PUBLIC_IP:3000
-        - echo "API_URL is $API_URL"
-        - echo "Deploying the Docker container to EC2 via SSM..."
-        - |
-          aws ssm send-command \
-            --instance-ids $INSTANCE_ID \
-            --document-name "AWS-RunShellScript" \
-            --comment "Deploy Docker container" \
-            --parameters '{"commands":["aws ecr get-login-password --region '$REGION' | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
-                                        "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
-                                        "docker stop regulus-container || true",
-                                        "docker rm regulus-container || true",
-                                        "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
-            --region $REGION
+            --output text \
+            --region $REGION)
+      - echo "Public IP is $PUBLIC_IP"
+      - API_URL=http://$PUBLIC_IP:3000
+      - echo "API_URL is $API_URL"
+      - echo "Deploying the Docker container to EC2 via SSM..."
+      - |
+        aws ssm send-command \
+          --instance-ids $INSTANCE_ID \
+          --document-name "AWS-RunShellScript" \
+          --comment "Deploy Docker container" \
+          --parameters '{"commands":["aws ecr get-login-password --region '$REGION' | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
+                                      "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
+                                      "docker stop regulus-container || true",
+                                      "docker rm regulus-container || true",
+                                      "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
+          --region $REGION
+      - echo "Deployment initiated successfully!"
 
 artifacts:
   files:
