--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,6 +12,7 @@ phases:
       - JWT_SECRET=$(aws ssm get-parameter --name /regulus/prod/JWT_SECRET --with-decryption --query Parameter.Value --output text)
       - LOG_LEVEL=$(aws ssm get-parameter --name /regulus/prod/LOG_LEVEL --with-decryption --query Parameter.Value --output text)
       - NODE_ENV=$(aws ssm get-parameter --name /regulus/prod/NODE_ENV --with-decryption --query Parameter.Value --output text)
+      - CORS_ORIGIN=$(aws ssm get-parameter --name /regulus/prod/CORS_ORIGIN --with-decryption --query Parameter.Value --output text)
       - echo "Fetched parameters successfully!"
       - echo "INSTANCE_ID=$INSTANCE_ID"
       - echo "REGION=$REGION"
@@ -49,7 +50,7 @@ phases:
                                       "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
                                       "docker stop regulus-container || true",
                                       "docker rm regulus-container || true",
-                                      "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
+                                      "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' -e DATABASE_URL='$DATABASE_URL' -e JWT_EXPIRATION='$JWT_EXPIRATION' -e JWT_SECRET='$JWT_SECRET' -e LOG_LEVEL='$LOG_LEVEL' -e NODE_ENV='$NODE_ENV' -e CORS_ORIGIN='$CORS_ORIGIN' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
           --region $REGION
       - echo "Deployment initiated successfully!"
 
