--- a/buildspec.yml
+++ b/buildspec.yml
@@ -51,25 +51,24 @@ phases:
           --instance-ids $INSTANCE_ID \
           --document-name "AWS-RunShellScript" \
           --comment "Deploy Docker container" \
-          --parameters '{"commands":["aws ecr get-login-password --region '"$REGION"' | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
+          --parameters '{"commands":["aws ecr get-login-password --region '$REGION' | docker login --username AWS --password-stdin 841467961522.dkr.ecr.eu-west-1.amazonaws.com",
                                       "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
                                       "docker stop regulus-container || true",
                                       "docker rm regulus-container || true",
                                       "docker run -d --name regulus-container -p 3000:3000 \
-                                          -e API_URL='"$API_URL"' \
-                                          -e DATABASE_URL='"$DATABASE_URL"' \
-                                          -e JWT_EXPIRATION='"$JWT_EXPIRATION"' \
-                                          -e JWT_SECRET='"$JWT_SECRET"' \
-                                          -e LOG_LEVEL='"$LOG_LEVEL"' \
-                                          -e NODE_ENV='"$NODE_ENV"' \
-                                          -e CORS_ORIGIN='"$CORS_ORIGIN"' \
-                                          -e DB_HOST='"$DB_HOST"' \
-                                          -e DB_PORT='"$DB_PORT"' \
-                                          -e DB_USER='"$DB_USER"' \
-                                          -e DB_PASS='"$DB_PASS"' \
-                                          -e DB_NAME='"$DB_NAME"' \
-                                          841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}'
-
+                                          -e DATABASE_URL='\''$DATABASE_URL'\'' \
+                                          -e DB_HOST='\''$DB_HOST'\'' \
+                                          -e DB_PORT='\''$DB_PORT'\'' \
+                                          -e DB_USER='\''$DB_USER'\'' \
+                                          -e DB_PASS='\''$DB_PASS'\'' \
+                                          -e DB_NAME='\''$DB_NAME'\'' \
+                                          -e API_URL='\''$API_URL'\'' \
+                                          -e CORS_ORIGIN='\''$CORS_ORIGIN'\'' \
+                                          -e JWT_SECRET='\''$JWT_SECRET'\'' \
+                                          -e JWT_EXPIRATION='\''$JWT_EXPIRATION'\'' \
+                                          -e LOG_LEVEL='\''$LOG_LEVEL'\'' \
+                                          -e NODE_ENV='\''$NODE_ENV'\'' \
+                                          841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
           --region $REGION
       - echo "Deployment initiated successfully!"
 
