--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,7 @@ phases:
       - LOG_LEVEL=$(aws ssm get-parameter --name /regulus/prod/LOG_LEVEL --with-decryption --query Parameter.Value --output text)
       - NODE_ENV=$(aws ssm get-parameter --name /regulus/prod/NODE_ENV --with-decryption --query Parameter.Value --output text)
       - CORS_ORIGIN=$(aws ssm get-parameter --name /regulus/prod/CORS_ORIGIN --with-decryption --query Parameter.Value --output text)
+      - GOOGLE_CLIENT_ID=$(aws ssm get-parameter --name /regulus/prod/GOOGLE_CLIENT_ID --with-decryption --query Parameter.Value --output text)
       - DB_HOST=$(aws ssm get-parameter --name /regulus/prod/DB_HOST --with-decryption --query Parameter.Value --output text)
       - DB_PORT=$(aws ssm get-parameter --name /regulus/prod/DB_PORT --with-decryption --query Parameter.Value --output text)
       - DB_USER=$(aws ssm get-parameter --name /regulus/prod/DB_USER --with-decryption --query Parameter.Value --output text)
@@ -55,7 +56,7 @@ phases:
                                       "docker pull 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest",
                                       "docker stop regulus-container || true",
                                       "docker rm regulus-container || true",
-                                      "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' -e DATABASE_URL='$DATABASE_URL' -e DB_HOST='$DB_HOST' -e DB_PORT='$DB_PORT' -e DB_USER='$DB_USER' -e DB_PASS='$DB_PASS' -e DB_NAME='$DB_NAME' -e JWT_EXPIRATION='$JWT_EXPIRATION' -e JWT_SECRET='$JWT_SECRET' -e LOG_LEVEL='$LOG_LEVEL' -e NODE_ENV='$NODE_ENV' -e CORS_ORIGIN='$CORS_ORIGIN' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
+                                      "docker run -d --name regulus-container -p 3000:3000 -e API_URL='$API_URL' -e GOOGLE_CLIENT_ID='$GOOGLE_CLIENT_ID' -e DATABASE_URL='$DATABASE_URL' -e DB_HOST='$DB_HOST' -e DB_PORT='$DB_PORT' -e DB_USER='$DB_USER' -e DB_PASS='$DB_PASS' -e DB_NAME='$DB_NAME' -e JWT_EXPIRATION='$JWT_EXPIRATION' -e JWT_SECRET='$JWT_SECRET' -e LOG_LEVEL='$LOG_LEVEL' -e NODE_ENV='$NODE_ENV' -e CORS_ORIGIN='$CORS_ORIGIN' 841467961522.dkr.ecr.eu-west-1.amazonaws.com/regulus:latest"]}' \
           --region $REGION
       - echo "Deployment initiated successfully!"
 
