Perform general cleanup and code formatting

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
     volumes:
       - ./src:/app/src
       - ./prisma:/app/prisma
-      - /app/node_modules
+      - ./logs:/app/logs
 
 volumes:
   db_data:
