--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ yarn-error.log
 .env
 
 scripts/
+logs/
 
 # Build outputs (if any)
 dist/
@@ -19,3 +20,5 @@ build/
 .DS_Store
 .idea/
 .vscode/
+
+*.log
