--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3",
+    "nodemailer": "^7.0.7",
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "safe-eval": "^0.4.1",
