--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.13.1",
     "pino": "^9.6.0",
     "safe-eval": "^0.4.1",
+    "stripe": "^19.1.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.5",
