orchestrator comms services added.

--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@middleware": "./src/middleware",
     "@models": "./src/models",
     "@routes": "./src/routes",
-    "@utils": "./src/utils"
+    "@utils": "./src/utils",
+    "@services": "./src/services"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
